@@ -17,15 +17,10 @@
  */
 package io.github.ladysnake.locki;
 
-import io.github.ladysnake.locki.impl.InventoryKeeperBase;
-import me.lucko.fabric.api.permissions.v0.Permissions;
-import net.minecraft.server.command.ServerCommandSource;
-import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.util.Identifier;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
-import org.mockito.Mockito;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -38,7 +33,7 @@ public class LockiTest {
 
     @BeforeClass
     public static void setUpGlobal() {
-        instance.onInitialize();
+        instance.onInitialize(null);
     }
 
     @Before
@@ -54,7 +49,7 @@ public class LockiTest {
                 .map(String::valueOf)
                 .map(Identifier::new)
                 .map(Locki::registerLock)
-                .collect(Collectors.toList());
+                .toList();
         assertEquals(IntStream.range(0, 2000).boxed().collect(Collectors.toList()), locks.stream().map(InventoryLock::getRawId).sorted().collect(Collectors.toList()));
     }
 
@@ -90,27 +85,5 @@ public class LockiTest {
         InventoryNode node = Locki.registerNode(DefaultInventoryNodes.ARMOR, "test-b");
         assertEquals(node, Locki.getNode("inventory.armor.test-b"));
         assertNull(Locki.getNode("inventory.armor.test-a"));
-    }
-
-    @Test
-    public void checkPermission() {
-        InventoryKeeper keeper = new InventoryKeeperBase();
-        instance.keeperFunction = p -> keeper;
-
-        ServerPlayerEntity player = Mockito.mock(ServerPlayerEntity.class);
-        ServerCommandSource source = Mockito.mock(ServerCommandSource.class);
-        Mockito.when(source.getEntity()).thenReturn(player);
-        Mockito.when(player.getCommandSource()).thenReturn(source);
-
-        assertTrue(Permissions.check(player, "locki.access.inventory", true));
-        InventoryLock lock = Locki.registerLock(new Identifier("test", "test"));
-        InventoryNode node = Locki.registerNode(InventoryNode.ROOT, "test");
-        Locki.registerNode(node, "child");
-        Locki.registerNode(InventoryNode.ROOT, "test-foo");
-        keeper.addLock(lock, node);
-
-        assertFalse(Permissions.check(player, "locki.access.test", true));
-        assertFalse(Permissions.check(player, "locki.access.test.child", true));
-        assertTrue(Permissions.check(player, "locki.access.test-foo", true));
     }
 }
